--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ services:
 script:
   - docker build -t jinw1990/iswift.linux:travis
 
-deploy:
-  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  - docker push jinw1990/iswift.linux:travis
+after_success:
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+    docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+    docker push jinw1990/iswift.linux:travis;
+    fi
